chat: fix new min-height overflow in compact mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1716,7 +1716,7 @@ OM = _omsg
     if (compact) {
         /// Reset height/width if there is an overflow.
         #app > div > [tabindex] {
-            @media screen and (max-height: 500px) { min-height: auto }
+            @media screen and (max-height: 648px) { min-height: auto }
             @media screen and (max-width: 648px) { min-width: auto }
             // > div *:hover { box-shadow: inset 0 0 0 1px crimson i }
         }
